# crp

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  config.toml
.devcontainer/: Dockerfile  devcontainer.json  script.sh
.github/workflows/: ci.yml  release.yml
src/: config.rs  lib.rs  main.rs  parser.rs  structs.rs
