[package]
name = "crp"
description = "Custom Rich Presence client for Discord."
version = "1.0.4"
authors = ["Yakiyo"]
readme = "README.md"
repository = "https://github.com/Yakiyo/crp"
license = "MIT"
edition = "2021"

[dependencies]
discord-rich-presence = "0.2.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_derive = "1.0.147"
toml = "0.7.4"
colored = "2"
yansi = "0.5.1"
