[package]
name = "crp"
description = "Custom Rich Presence client for Discord."
version = "1.0.4"
authors = ["Yakiyo"]
readme = "README.md"
repository = "https://github.com/Yakiyo/crp"
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.4"
yansi = "0.5.1"
discord-presence = "0.5.14"
